# Brick_Game_C

./: CMakeLists.txt  todo
brick_game/tetris/: CMakeLists.txt
brick_game/tetris/include/: defines.h  fsm.h  game_entities.h  helpers.h  lib_interface.h  memory_management.h  services.h
brick_game/tetris/source/: fsm.c  game_entities.c  helpers.c  lib_interface.c  main.c  memory_management.c  services.c
gui/cli/: CMakeLists.txt  command_line_interface.c  command_line_interface.h  main.c
